--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
         
         <div>
             <h2 class="t">Front-End Developer</h2>
-    <h1 class="otstyp3">Максим</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+    <h1 class="otstyp3">Maxim Eremeev</h1>
+    <p class="p" >Hi,
+        I am excited to apply for the currently open IT Specialist
+        position at Web Dream Technology.
+        I am a junior front-end developer and am proficient in HTML5, CSS3,
+        JavaScript, React, Redux/toolkit, Git Hub , Parcel, Node.js. In addition, I have experience with
+        implementation of both individual and team projects.
+        I am interested in your vacancy because I want to participate
+        in web development. It is important for me to grow as Front End
+        developer and put into practice his knowledge in JS and React.
+        It would be an honor to do so in your company.
+        I'm ready to take the test. I look forward to sharing
+        all my experience in the interview. </p>
 
 
 
@@ -28,26 +39,26 @@
         </div>
         <div class="opit">
             <h3 class="otstyp2">Projects</h3>
-            <ol class="l2">
+            <ul class="l2">
                 <li>
-                    <a href="https://hellenglish.goit.global/">https://hellenglish.goit.global/</a>
+                    <a href="https://maksmaximusmaxim.github.io/-team-project/">Link</a>
                     <span>.............</span>
-                    [ HTML5, CSS3 ]
+                    [ HTML5 , CSS3 , JS , WEBPACK]
                 </li>
                 <li>
-                     <a href="https://cryptohub.goit.global/">https://cryptohub.goit.global/</a>
+                     <a href="https://maksmaximusmaxim.github.io/goit-js-hw-11/">Link</a>
                      <span>..............</span>
-                     [ JavaScript ]
+                     [ JS ]
                 </li>
                 <li>
-                     <a href="https://kidslike.goit.global/">https://kidslike.goit.global/</a>
+                     <a href="https://maksmaximusmaxim.github.io/goit-markup-hw-08/">Link</a>
                      <span>....................</span>
-                     [ React.js, Node.js ]
+                     [ HTML5 , CSS3 , JS ]
                 </li> 
-           </ol>
+           </ul>
 
         </div>
-        <div class="Work-Experience">
+        <!-- <div class="Work-Experience">
             <h3>Work Experience</h3>
             Front-End Developer  <span class="okrasit">Freelance</span> 
             <span class="okras4"><p>September 2019 - up to now   |   Country </p> </span>
@@ -60,8 +71,8 @@
 
 
 
-        </div>
-        <div class="Manager-Rogatwo">
+        </div> -->
+        <!-- <div class="Manager-Rogatwo">
             <h3>Manager  <span class="text3">Roga & Kopyta LLC </span> </h3>
             <span class="okras2"> <p>March 2015 - October 2018   |   Country</p></span>
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua. </li>
@@ -86,16 +97,16 @@
 
 
 
-        </div>
-        <div class="Education">
+        </div> -->
+        <!-- <div class="Education">
             <h3 class="Education2">Education</h3>
-            <h4 class="t1">National University of Radioelectronics</h4>
+            <h4 class="t1">Go It courses, Khmelnitskiy politechnic college</h4>
             <h4>Management</h4>
             <p>September 2009 - June 2014   |   Country</p>
 
 
 
-        </div>
+        </div> -->
     </div>
         <aside class="bok">
             <img src="img/2.png" alt="foto">
@@ -103,11 +114,11 @@
 <h3 class="niz7">Contacts</h3>
 <div class="f6">
     <span class="niz5">C:</span>
-    <a class="tel" href="tel:+380 00 000 00 00">+380 00 000 00 00</a>
+    <a class="tel" href="tel:+380 96 080 86 71">+380 96 080 86 71</a>
     </div>
 <div class="f5">
     <span class="niz6">E:</span>
-    <a class="mail" href="mailto:chornyiav@gmail.com">chornyiav@gmail.com</a>
+    <a class="mail" href="mailto:maximusmaximmaks@gmail.com">maximusmaximmaks@gmail.com</a>
     </div>
 
 
@@ -131,6 +142,7 @@
 <li>JavaScript</li>
 <li>React.js</li>
 <li>Node.js</li>
+<li>Redux/toolkit</li>
 </ul> 
 </span>
 </div>
@@ -138,11 +150,11 @@
     <h3 class="niz3">Soft Skills</h3>
 <ul class="niz2">
     <li>Scrum</li>
-<li>Agile</li>
-
-
-<li>GTD</li>
-<li>Teamwork</li>
+    <li>Team Lead</li>
+    <li>sociability</li>
+    <li>non-conflict</li>
+    <li>responsibility</li>
+    <li>honesty</li>
 </ul>
 </div>
         </aside>
