--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="boxinbox">
-      <div class="osnovnoy-block">
+    <div class="container">
+      <div class="container--mainContent">
         <div>
-          <h2 class="t">Front-End Developer</h2>
-          <h1 class="otstyp3">Maxim Eremeev</h1>
-          <p class="p">
+          <h2 class="container--title">Front-End Developer</h2>
+          <h1 class="container--titleName">Maxim Eremeev</h1>
+          <p class="container--text">
             Hi, I am excited to apply for the currently open IT Specialist
             position at Web Dream Technology. I am a junior front-end developer
             and am proficient in HTML5, CSS3, JavaScript, React, Redux/toolkit,
@@ -34,35 +34,35 @@
             sharing all my experience in the interview.
           </p>
         </div>
-        <div class="opit">
-          <h3 class="otstyp2">Projects</h3>
-          <ul class="l2">
+        <div class="project">
+          <h3 class="project--title">Projects</h3>
+          <ul class="project--list">
             <li>
-              <a href="https://maksmaximusmaxim.github.io/-team-project/"
+              <a  class="project--linkName" href="https://maksmaximusmaxim.github.io/-team-project/"
                 >Filmoteka</a
               >
-              <a href="https://github.com/Maksmaximusmaxim/-team-project"
-                >Link</a
+              <a class="project--linkCode" href="https://github.com/Maksmaximusmaxim/-team-project"
+                >Code</a
               >
               <span>.............</span>
               [ HTML5 , CSS3 , JS , WEBPACK]
             </li>
             <li>
-              <a href="https://maksmaximusmaxim.github.io/goit-js-hw-11/"
+              <a  class="project--linkName" href="https://maksmaximusmaxim.github.io/goit-js-hw-11/"
                 >SearchPhoto</a
               >
-              <a href="https://github.com/Maksmaximusmaxim/goit-js-hw-11"
-              >Link</a
+              <a class="project--linkCode" href="https://github.com/Maksmaximusmaxim/goit-js-hw-11"
+              >Code</a
             >
               <span>..............</span>
               [ JS ]
             </li>
             <li>
-              <a href="https://maksmaximusmaxim.github.io/goit-markup-hw-08/"
+              <a  class="project--linkName"href="https://maksmaximusmaxim.github.io/goit-markup-hw-08/"
                 >WebStudio</a
               >
-              <a href="https://github.com/Maksmaximusmaxim/goit-markup-hw-08"
-              >Link</a
+              <a class="project--linkCode" href="https://github.com/Maksmaximusmaxim/goit-markup-hw-08"
+              >Code</a
             >
               <span>....................</span>
               [ HTML5 , CSS3 , JS ]
