--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
       </div>
       <aside>
-        <img src="img/2.png" alt="photo" />
+        <img src="img/photo.png" alt="photo" />
 
         <div class="myData">
           <h3 class="myData--title">Contacts</h3>
